# papp

./: .gitignore  CMakeLists.txt  README.md
src/: get_pysrc.h.in  icon.rc.in  launcher.pyi  lunmod.cc  main.cc  main.py  main.rc  os.h  os.hh  path.cc  path.hh  utils.cc  utils.h
thirdlib/: CMakeLists.txt
thirdlib/Elevate_Src/: Elevate.h  ElevateDLL.cpp  ElevateEXE.cpp  TestChild.cpp  TestParent.cpp  website.txt
tools/: check_require.py  config_build.py  create_papp.py  create_papp_cli.py  requirements.txt  run_crepapp.bat
